update on remaining NaN features
structure how to proceed with lot frontage, garageyrblt and masvnrarea
in a next step

--- a/HousePrices/src/missing_data.ipynb
+++ b/HousePrices/src/missing_data.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -229,89 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      TotalMissing  Percent\n",
-      "1011            15    18.75\n",
-      "533             15    18.75\n",
-      "1218            15    18.75\n",
-      "39              15    18.75\n",
-      "705             14    17.50\n",
-      "1179            14    17.50\n",
-      "520             14    17.50\n",
-      "375             11    13.75\n",
-      "1035            11    13.75\n",
-      "1143            11    13.75\n",
-      "1030            11    13.75\n",
-      "287             11    13.75\n",
-      "1321            11    13.75\n",
-      "342             11    13.75\n",
-      "613             10    12.50\n",
-      "108             10    12.50\n",
-      "125             10    12.50\n",
-      "210             10    12.50\n",
-      "1219            10    12.50\n",
-      "1407            10    12.50\n",
-      "614             10    12.50\n",
-      "1412            10    12.50\n",
-      "710             10    12.50\n",
-      "102             10    12.50\n",
-      "1283            10    12.50\n",
-      "1000            10    12.50\n",
-      "960             10    12.50\n",
-      "1123            10    12.50\n",
-      "535             10    12.50\n",
-      "1234            10    12.50\n",
-      "...            ...      ...\n",
-      "858              3     3.75\n",
-      "115              3     3.75\n",
-      "228              3     3.75\n",
-      "823              3     3.75\n",
-      "836              3     3.75\n",
-      "1171             3     3.75\n",
-      "1040             3     3.75\n",
-      "130              3     3.75\n",
-      "626              3     3.75\n",
-      "390              3     3.75\n",
-      "387              3     3.75\n",
-      "1399             3     3.75\n",
-      "890              2     2.50\n",
-      "1457             2     2.50\n",
-      "766              2     2.50\n",
-      "51               2     2.50\n",
-      "197              2     2.50\n",
-      "1076             2     2.50\n",
-      "1263             2     2.50\n",
-      "733              2     2.50\n",
-      "1182             2     2.50\n",
-      "1083             2     2.50\n",
-      "1170             2     2.50\n",
-      "1387             2     2.50\n",
-      "810              2     2.50\n",
-      "21               2     2.50\n",
-      "439              2     2.50\n",
-      "1210             2     2.50\n",
-      "1386             1     1.25\n",
-      "1328             1     1.25\n",
-      "\n",
-      "[1460 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(numbers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -344,12 +262,12 @@
    "source": [
     "# drop all features with more than 20% of missing data\n",
     "def delete_features(df):\n",
-    "    return df.drop(['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu', 'LotFrontage'], axis=1)"
+    "    return df.drop(['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -369,96 +287,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values overall:  609\n",
-      "From total values overall:  108040\n",
-      "Resulting in: 0.56% missing data overall\n"
+      "Missing values overall:  868\n",
+      "From total values overall:  109500\n",
+      "Resulting in: 0.79% missing data overall\n"
      ]
     }
    ],
    "source": [
     "overall_missing_data(train_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      TotalMissing    Percent\n",
-      "1218            10  13.513514\n",
-      "705             10  13.513514\n",
-      "1179            10  13.513514\n",
-      "533             10  13.513514\n",
-      "1011            10  13.513514\n",
-      "520             10  13.513514\n",
-      "39              10  13.513514\n",
-      "1323             5   6.756757\n",
-      "1325             5   6.756757\n",
-      "125              5   6.756757\n",
-      "1326             5   6.756757\n",
-      "108              5   6.756757\n",
-      "291              5   6.756757\n",
-      "1321             5   6.756757\n",
-      "1143             5   6.756757\n",
-      "968              5   6.756757\n",
-      "127              5   6.756757\n",
-      "1137             5   6.756757\n",
-      "970              5   6.756757\n",
-      "1337             5   6.756757\n",
-      "1131             5   6.756757\n",
-      "441              5   6.756757\n",
-      "976              5   6.756757\n",
-      "960              5   6.756757\n",
-      "778              5   6.756757\n",
-      "434              5   6.756757\n",
-      "620              5   6.756757\n",
-      "88               5   6.756757\n",
-      "89               5   6.756757\n",
-      "90               5   6.756757\n",
-      "...            ...        ...\n",
-      "971              0   0.000000\n",
-      "972              0   0.000000\n",
-      "974              0   0.000000\n",
-      "975              0   0.000000\n",
-      "978              0   0.000000\n",
-      "979              0   0.000000\n",
-      "980              0   0.000000\n",
-      "981              0   0.000000\n",
-      "957              0   0.000000\n",
-      "956              0   0.000000\n",
-      "955              0   0.000000\n",
-      "953              0   0.000000\n",
-      "933              0   0.000000\n",
-      "934              0   0.000000\n",
-      "935              0   0.000000\n",
-      "937              0   0.000000\n",
-      "938              0   0.000000\n",
-      "939              0   0.000000\n",
-      "940              0   0.000000\n",
-      "941              0   0.000000\n",
-      "943              0   0.000000\n",
-      "944              0   0.000000\n",
-      "945              0   0.000000\n",
-      "946              0   0.000000\n",
-      "947              0   0.000000\n",
-      "949              0   0.000000\n",
-      "950              0   0.000000\n",
-      "951              0   0.000000\n",
-      "952              0   0.000000\n",
-      "0                0   0.000000\n",
-      "\n",
-      "[1460 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "missing_data_per_observation(train_features)"
    ]
   },
   {
@@ -470,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -508,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -517,9 +353,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing values overall:  89\n",
-      "From total values overall:  394200\n",
-      "Resulting in: 0.02% missing data overall\n"
+      "Missing values overall:  348\n",
+      "From total values overall:  395660\n",
+      "Resulting in: 0.09% missing data overall\n"
      ]
     }
    ],
@@ -529,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -538,37 +374,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                      TotalMissing   Percent\n",
-      "GarageYrBlt                     81  5.547945\n",
-      "MasVnrArea                       8  0.547945\n",
-      "SaleCondition_nan                0  0.000000\n",
-      "Condition1_RRNe                  0  0.000000\n",
-      "Condition1_Norm                  0  0.000000\n",
-      "Condition1_PosA                  0  0.000000\n",
-      "Condition1_PosN                  0  0.000000\n",
-      "Condition1_RRAe                  0  0.000000\n",
-      "Condition1_RRAn                  0  0.000000\n",
-      "Condition1_RRNn                  0  0.000000\n",
-      "Neighborhood_nan                 0  0.000000\n",
-      "Condition1_nan                   0  0.000000\n",
-      "Condition2_Feedr                 0  0.000000\n",
-      "Condition2_Norm                  0  0.000000\n",
-      "Condition2_PosA                  0  0.000000\n",
-      "Condition2_PosN                  0  0.000000\n",
-      "Condition2_RRAe                  0  0.000000\n",
-      "Condition1_Feedr                 0  0.000000\n",
-      "Neighborhood_Veenker             0  0.000000\n",
-      "Condition2_RRNn                  0  0.000000\n",
-      "Neighborhood_Timber              0  0.000000\n",
-      "Neighborhood_StoneBr             0  0.000000\n",
-      "Neighborhood_Somerst             0  0.000000\n",
-      "Neighborhood_SawyerW             0  0.000000\n",
-      "Neighborhood_Sawyer              0  0.000000\n",
-      "Neighborhood_SWISU               0  0.000000\n",
-      "Neighborhood_OldTown             0  0.000000\n",
-      "Neighborhood_NridgHt             0  0.000000\n",
-      "Neighborhood_NoRidge             0  0.000000\n",
-      "Neighborhood_NWAmes              0  0.000000\n"
+      "                      TotalMissing    Percent\n",
+      "LotFrontage                    259  17.739726\n",
+      "GarageYrBlt                     81   5.547945\n",
+      "MasVnrArea                       8   0.547945\n",
+      "Condition1_RRNe                  0   0.000000\n",
+      "Condition1_Feedr                 0   0.000000\n",
+      "Condition1_Norm                  0   0.000000\n",
+      "Condition1_PosA                  0   0.000000\n",
+      "Condition1_PosN                  0   0.000000\n",
+      "Condition1_RRAe                  0   0.000000\n",
+      "Condition1_RRAn                  0   0.000000\n",
+      "SaleCondition_nan                0   0.000000\n",
+      "Neighborhood_Veenker             0   0.000000\n",
+      "Condition1_RRNn                  0   0.000000\n",
+      "Condition1_nan                   0   0.000000\n",
+      "Condition2_Feedr                 0   0.000000\n",
+      "Condition2_Norm                  0   0.000000\n",
+      "Condition2_PosA                  0   0.000000\n",
+      "Condition2_PosN                  0   0.000000\n",
+      "Neighborhood_nan                 0   0.000000\n",
+      "Neighborhood_Timber              0   0.000000\n",
+      "Condition2_RRAn                  0   0.000000\n",
+      "Neighborhood_StoneBr             0   0.000000\n",
+      "Neighborhood_Somerst             0   0.000000\n",
+      "Neighborhood_SawyerW             0   0.000000\n",
+      "Neighborhood_Sawyer              0   0.000000\n",
+      "Neighborhood_SWISU               0   0.000000\n",
+      "Neighborhood_OldTown             0   0.000000\n",
+      "Neighborhood_NridgHt             0   0.000000\n",
+      "Neighborhood_NoRidge             0   0.000000\n",
+      "Neighborhood_NWAmes              0   0.000000\n"
      ]
     }
    ],
@@ -578,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -589,7 +425,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      TotalMissing   Percent\n",
+      "1407             2  0.738007\n",
+      "287              2  0.738007\n",
+      "1030             2  0.738007\n",
+      "393              2  0.738007\n",
+      "234              2  0.738007\n",
+      "1143             2  0.738007\n",
+      "529              2  0.738007\n",
+      "375              2  0.738007\n",
+      "307              2  0.738007\n",
+      "826              1  0.369004\n",
+      "237              1  0.369004\n",
+      "490              1  0.369004\n",
+      "1148             1  0.369004\n",
+      "269              1  0.369004\n",
+      "1153             1  0.369004\n",
+      "1154             1  0.369004\n",
+      "495              1  0.369004\n",
+      "496              1  0.369004\n",
+      "1161             1  0.369004\n",
+      "465              1  0.369004\n",
+      "1097             1  0.369004\n",
+      "1164             1  0.369004\n",
+      "221              1  0.369004\n",
+      "794              1  0.369004\n",
+      "218              1  0.369004\n",
+      "791              1  0.369004\n",
+      "1173             1  0.369004\n",
+      "214              1  0.369004\n",
+      "789              1  0.369004\n",
+      "1177             1  0.369004\n",
+      "...            ...       ...\n",
+      "916              0  0.000000\n",
+      "919              0  0.000000\n",
+      "885              0  0.000000\n",
+      "920              0  0.000000\n",
+      "922              0  0.000000\n",
+      "923              0  0.000000\n",
+      "924              0  0.000000\n",
+      "926              0  0.000000\n",
+      "930              0  0.000000\n",
+      "931              0  0.000000\n",
+      "907              0  0.000000\n",
+      "906              0  0.000000\n",
+      "905              0  0.000000\n",
+      "903              0  0.000000\n",
+      "886              0  0.000000\n",
+      "887              0  0.000000\n",
+      "888              0  0.000000\n",
+      "889              0  0.000000\n",
+      "890              0  0.000000\n",
+      "891              0  0.000000\n",
+      "892              0  0.000000\n",
+      "894              0  0.000000\n",
+      "895              0  0.000000\n",
+      "896              0  0.000000\n",
+      "897              0  0.000000\n",
+      "898              0  0.000000\n",
+      "899              0  0.000000\n",
+      "901              0  0.000000\n",
+      "902              0  0.000000\n",
+      "0                0  0.000000\n",
+      "\n",
+      "[1460 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -597,6 +515,72 @@
    "source": [
     "sheet.to_csv(\"../data/missing_values_afterdeletion.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### impute, delete observation, find correlating alternative?\n",
+    "MasVnrArea\n",
+    "- option 1) delete 8 observations\n",
+    "- option 2) find imputing values\n",
+    "\n",
+    "GarageYrBlt\n",
+    "- option 1) possibly correlating with YearBlt, so that GarageYrBlt can be deleted\n",
+    "- option 2) find imputing value. will be a random guess\n",
+    "- option 2) least preferred: delete 81 observations\n",
+    "\n",
+    "LotFrontage\n",
+    "- option 1) find a correlating feature, so that LotFrontage can be deleted\n",
+    "- option 2) impute missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -980,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -994,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
