--- a/HousePrices/src/missing_data.ipynb
+++ b/HousePrices/src/missing_data.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -315,11 +315,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 92,
-=======
-   "execution_count": 14,
->>>>>>> origin/master
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +334,7 @@
        "Name: LotFrontage, dtype: float64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,11 +352,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 93,
-=======
-   "execution_count": 15,
->>>>>>> origin/master
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -378,11 +370,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 16,
->>>>>>> origin/master
    "metadata": {
     "collapsed": true
    },
@@ -391,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -402,20 +390,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-=======
-   "execution_count": 17,
->>>>>>> origin/master
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +409,7 @@
        "Name: MasVnrArea, dtype: float64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,11 +429,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 97,
-=======
-   "execution_count": 18,
->>>>>>> origin/master
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -469,11 +440,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 98,
-=======
-   "execution_count": 19,
->>>>>>> origin/master
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -494,11 +461,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 99,
-=======
-   "execution_count": 20,
->>>>>>> origin/master
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -579,18 +542,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "test_interim = delete_features(test_data, ['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu','MasVnrType', 'MasVnrArea', 'GarageYrBlt' ])"
+    "test_interim = test_data.drop(['PoolQC', 'MiscFeature', 'Alley', 'Fence', 'FireplaceQu','MasVnrType', 'MasVnrArea', 'GarageYrBlt'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -618,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -702,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -713,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -724,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -735,23 +698,23 @@
      "text": [
       "==============================\n",
       "RandomForestRegressor\n",
-      "Root mean squared error: 33346.553824652205\n",
-      "Score: 0.8389781623150461\n",
+      "Root mean squared error: 32844.43694626833\n",
+      "Score: 0.8437908376318094\n",
       "==============================\n",
       "DecisionTreeRegressor\n",
-      "Root mean squared error: 50740.33876128134\n",
-      "Score: 0.6271882547362768\n",
+      "Root mean squared error: 40507.94309609798\n",
+      "Score: 0.7623908045454512\n",
       "==============================\n",
       "LinearRegression\n",
-      "Root mean squared error: 54780.619892225324\n",
-      "Score: 0.5654530099236712\n"
+      "Root mean squared error: 54780.61989222654\n",
+      "Score: 0.5654530099236519\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Applications/anaconda/lib/python3.6/site-packages/sklearn/linear_model/coordinate_descent.py:484: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Fitting data with very small alpha may cause precision problems.\n",
+      "/Users/claudine/anaconda/lib/python3.5/site-packages/sklearn/linear_model/coordinate_descent.py:484: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Fitting data with very small alpha may cause precision problems.\n",
       "  ConvergenceWarning)\n"
      ]
     },
@@ -761,16 +724,16 @@
      "text": [
       "==============================\n",
       "Lasso\n",
-      "Root mean squared error: 53479.3132706555\n",
+      "Root mean squared error: 53479.31327065549\n",
       "Score: 0.5858530140665199\n",
       "==============================\n",
       "ElasticNet\n",
-      "Root mean squared error: 50689.86456913378\n",
+      "Root mean squared error: 50689.86456913379\n",
       "Score: 0.6279295983216646\n",
       "==============================\n",
       "Ridge\n",
-      "Root mean squared error: 45995.96988338715\n",
-      "Score: 0.6936467985054583\n",
+      "Root mean squared error: 45995.969883387144\n",
+      "Score: 0.6936467985054584\n",
       "==============================\n",
       "SVR\n",
       "Root mean squared error: 85107.82593096742\n",
@@ -781,8 +744,8 @@
       "Score: -0.011393913784108811\n",
       "==============================\n",
       "LinearSVR\n",
-      "Root mean squared error: 57033.07231770331\n",
-      "Score: 0.5289832019300592\n",
+      "Root mean squared error: 118573.85166649462\n",
+      "Score: -1.0359200347985738\n",
       "==============================\n"
      ]
     }
@@ -824,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -840,7 +803,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -949,7 +912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
