--- a/HousePrices/src/analyze_quantitative_data_outliers.ipynb
+++ b/HousePrices/src/analyze_quantitative_data_outliers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -3888,41 +3888,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "id = train_data['Id']\n",
-    "train_data = train_data.drop(['Id', 'SalePrice'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "emp_cov = EmpiricalCovariance().fit(train_data)"
+    "# list of all quantitative, numeric features, that have not been deleted due to their analysis\n",
+    "num_columns = ['LotFrontage', 'LotArea', 'BsmtFinSF1', 'BsmtUnfSF', 'TotalBsmtSF', '2ndFlrSF', 'GrLivArea',\n",
+    "               'BsmtFullBath', 'FullBath', 'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'Fireplaces', 'GarageCars',\n",
+    "               'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', 'ScreenPorch', 'PoolArea', 'MiscVal']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "mahalanobis_dist = emp_cov.mahalanobis(train_data)/train_data.shape[1]"
+    "train_data_numeric = train_data[num_columns]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "emp_cov = EmpiricalCovariance().fit(train_data_numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mahalanobis_dist = emp_cov.mahalanobis(train_data_numeric)/train_data_numeric.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mahalanobis_dist = pd.Series(data=mahalanobis_dist.values, index=train_data['Id'].values, name='mahalanobis_dist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -3931,47 +3955,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "346    3.897921\n",
-      "dtype: float64\n"
+      "49       5.264044\n",
+      "54       4.541297\n",
+      "186      4.335240\n",
+      "198     11.958119\n",
+      "250     13.413414\n",
+      "314     23.859502\n",
+      "323      4.628503\n",
+      "336     14.215167\n",
+      "347     49.154844\n",
+      "496      4.173443\n",
+      "524      4.621566\n",
+      "636      4.155854\n",
+      "707      6.474996\n",
+      "810      5.593340\n",
+      "811     14.576086\n",
+      "855      5.082474\n",
+      "935      9.071207\n",
+      "1171    11.331919\n",
+      "1183    11.031339\n",
+      "1231    15.529560\n",
+      "1299    20.565432\n",
+      "1329     7.425512\n",
+      "1387    12.516493\n",
+      "1424    19.682261\n",
+      "Name: mahalanobis_dist, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "outliers = mahalanobis_dist[mahalanobis_dist > 2.5]\n",
+    "# less than 100 observations, keep threshold on 2.5, more than 100 observations keep threshold on 3.5 or 4.0\n",
+    "outliers = mahalanobis_dist[mahalanobis_dist > 4.0] \n",
     "print(outliers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 123,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train_data['mahalanobis_dist'] = mahalanobis_dist"
+    "train_data = train_data.join(mahalanobis_dist, on=train_data['Id'], how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 126,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# add mahalanobis distance to train data file\n",
-    "train_data.to_csv(\"../data/outlier_train_data.csv\", index=False)"
+    "# add mahalanobis distance to train data file for further inspections and as additional information\n",
+    "train_data.to_csv(\"../data/train_data_mahalanobis.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
