--- a/HousePrices/src/train_model.ipynb
+++ b/HousePrices/src/train_model.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# list of all quantitative, numeric features, that have not been deleted due to their analysis\n",
+    "selected_num_columns = ['LotFrontage', 'LotArea', 'BsmtFinSF1', 'BsmtUnfSF', 'TotalBsmtSF', '2ndFlrSF', 'GrLivArea',\n",
+    "               'BsmtFullBath', 'FullBath', 'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'Fireplaces', 'GarageCars',\n",
+    "               'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', 'ScreenPorch', 'PoolArea', 'MiscVal']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -104,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -115,12 +129,12 @@
      "text": [
       "==============================\n",
       "RandomForestRegressor\n",
-      "Root mean squared error: 30961.21191836198\n",
-      "Score: 0.8422849877376064\n",
+      "Root mean squared error: 31197.165160176726\n",
+      "Score: 0.8398719576036158\n",
       "==============================\n",
       "DecisionTreeRegressor\n",
-      "Root mean squared error: 44601.48086041293\n",
-      "Score: 0.6727077762166473\n",
+      "Root mean squared error: 43309.52940134253\n",
+      "Score: 0.6913942173796107\n",
       "==============================\n",
       "LinearRegression\n",
       "Root mean squared error: 36729.009531807664\n",
@@ -161,8 +175,8 @@
       "Score: -0.004966571084560779\n",
       "==============================\n",
       "LinearSVR\n",
-      "Root mean squared error: 42279.52478830953\n",
-      "Score: 0.7058984423398985\n",
+      "Root mean squared error: 40518.61520534959\n",
+      "Score: 0.7298864825278706\n",
       "==============================\n"
      ]
     }
