--- a/HousePrices/src/missing_data.ipynb
+++ b/HousePrices/src/missing_data.ipynb
@@ -24,7 +24,7 @@
     "- known. as the dataset has already been pre-cleaned by Kaggle not expected.  \n",
     "- unknown. Some other data seems to be missing, although a value would be expected. E.g. LotFrontage etc. these missing values cannot be ignored. It has to be analyzed whether a value can be imputed.\n",
     "\n",
-    "As a conclusion there might be ignorable as well as not_ignorable (unknown) missing data in the dataset. The extent and impact of missing data have to be determined. "
+    "As a conclusion there might be ignorable as well as not_ignorable (unknown) missing data in the houseprices dataset. Due to the not_ignorable missing data, the extent and impact of missing data have to be determined. "
    ]
   },
   {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -62,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -249,7 +247,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,32 +257,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1460, 81)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: determine extent of missing data"
+    "## Step 2: Determine extent of missing data"
    ]
   },
   {
@@ -292,16 +268,16 @@
    "metadata": {},
    "source": [
     "Calculate the following three KPIs\n",
+    "- % and absolute number of missing data overall\n",
     "- % and absolute number of missing data per feature (variable)\n",
     "- % and absolute number of missing data per observation\n",
-    "- % and absolute number of missing data overall\n",
     "\n",
     "Overall objective is to achieve 0% missing data, as algorithms/statistics cannot deal with missing values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -319,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -335,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -355,10 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -375,11 +349,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.89% doesn't seem too high (e.g. such as for instance >50% of missing data) and missing data should be feasible to be remediated without biasing results.  \n",
+    "\n",
+    "Proceed with analysis per feature and per observation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -431,17 +412,14 @@
     "\n",
     "Nevertheless, there are also features with missing values which are not_ignorable and the reason why the values are missing are unkonwn. These are for instance the features LotFrontage or Electrical, as well as MasVnrArea and MasVnrType. \n",
     "\n",
-    "Let's also have a view on:\n",
-    "- missing data per observation, which shows that every observation has at least one missing value\n",
-    "- graphical view on missing values or patterns of missing values. "
+    "Let's now \n",
+    "also have a view on: missing data per observation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "missing_data_per_observation, missing_patterns = missing_data_per_observation(train_data)"
@@ -449,10 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -530,6 +506,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This table shows that every observation has at least one missing attribute. Therefore, features need to cleaned up first, hoping that overall situation on observations will then improve. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Diagnose randomness of missing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "either via empirical tests\n",
+    "graphical view on possible patterns - see picture below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -538,21 +536,6 @@
    "outputs": [],
    "source": [
     "missing_patterns.to_csv(\"../data/missing_values.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 3: diagnose randomness of missing data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "either via empirical tests\n",
-    "graphical view on possible patterns - see picture above"
    ]
   },
   {
@@ -620,9 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -663,9 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -729,9 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -779,9 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -800,9 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -910,9 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -943,9 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1128,7 +1097,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1142,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
